--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mchristlieb/mini-mvc",
+    "name": "bambamboole/mini-mvc",
     "type": "project",
     "license": "MIT",
     "authors": [
@@ -10,11 +10,19 @@
     ],
     "autoload":{
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "Tests"
         }
     },
     "require": {
         "symfony/dotenv": "^4.2",
         "twig/twig": "^2.8"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.1"
     }
 }
