--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
         }
     },
     "require": {
-        "symfony/dotenv": "^4.2",
-        "twig/twig": "^2.8"
+        "symfony/dotenv": "^4.3",
+        "twig/twig": "^2.11",
+        "symfony/http-foundation": "^4.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.1"
